ASUSFETest/src/objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>Potential_National_Scholar__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Potential National Scholar</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Priority_Applicant__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Student qualified to participate in the program.</inlineHelpText>
        <label>Priority Applicant</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Prospect_Qualifier_Date__c</fullName>
        <description>Date the qualifier was captured for a prospective student in the Prospect status.</description>
        <inlineHelpText>Enter the date the information was received.</inlineHelpText>
        <label>Prospect Qualifer Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Prospect_Qualifier_Decision_Factor__c</fullName>
        <inlineHelpText>Provide a reason for the qualifier listed.</inlineHelpText>
        <label>Prospect Decision Factor</label>
        <picklist>
            <picklistValues>
                <fullName>1st Choice Program unavailable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BHC Admission</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Continuing at 2 yr institution</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Course Availability</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Distance from Home</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Financial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Going to 4 yr institution</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Housing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>I-20 issued by another University</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Location</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Major not offered at preferred campus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Military</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mission</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not admitted to 1st choice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Playing Athletics elsewhere</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reputation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Response time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Size (too big)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Size (too small)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Starting at 2 yr institution</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Waiting on decision elsewhere</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Prospect_Qualifier__c</fullName>
        <label>Prospect Qualifier</label>
        <picklist>
            <picklistValues>
                <fullName>I plan to attend</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>I&apos;m still considering</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>I&apos;m not interested</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Qualifying__c</fullName>
        <description>Level of interest in the program or attending</description>
        <label>Qualifying</label>
        <picklist>
            <picklistValues>
                <fullName>Interested</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Undecided</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Longer Interested</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Reconsidered__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reconsidered</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Search_Segment__c</fullName>
        <label>Search Segment</label>
        <picklist>
            <picklistValues>
                <fullName>Admissible</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Barrett Eligible</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Scholar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Under Admissible</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Session__c</fullName>
        <label>Session</label>
        <picklist>
            <picklistValues>
                <fullName>A/C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Specialization_1__c</fullName>
        <label>Specialization 1</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Specialization_2__c</fullName>
        <label>Specialization 2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Specialization_3__c</fullName>
        <label>Specialization 3</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Student_Visa__c</fullName>
        <description>Formula field that displays whether or not the Contact__r.Visa_Type__c contains F1 or J1 visa types.</description>
        <formula>IF(INCLUDES( Contact__r.Visa_Type__c, &quot;F1&quot;), &quot;F1&quot; + BR(), NULL)+
IF(INCLUDES( Contact__r.Visa_Type__c, &quot;J1&quot;), &quot;J1&quot;, NULL)</formula>
        <label>Student Visa</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Talisma_Lead__c</fullName>
        <externalId>true</externalId>
        <label>Talisma Lead</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Term__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Term</label>
        <referenceTo>Term__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Trans_Path_2nd_Plan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>TP: Secondary Plan</label>
        <referenceTo>Plan__c</referenceTo>
        <relationshipLabel>Opportunities (Secondary Plan)</relationshipLabel>
        <relationshipName>Opportunities_TransPath2ndPlan</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Trans_Path_AA_Degree__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Transfer Pathway Associates degree</description>
        <label>TP: AA Degree</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Trans_Path_AGEC_Degree__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Arizona General Education Curriculum</inlineHelpText>
        <label>TP: AGEC Degree</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Trans_Path_Active_Date__c</fullName>
        <description>Transfer Pathway active date</description>
        <label>TP: Active Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Trans_Path_Agreement_Term__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Transfer Pathway Agreement Term</description>
        <label>TP: Agreement Term</label>
        <referenceTo>Term__c</referenceTo>
        <relationshipLabel>Opportunities (Agreement Term)</relationshipLabel>
        <relationshipName>Opportunities_TransPathTerm</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Trans_Path_Agreement_Type__c</fullName>
        <label>TP: Agreement Type</label>
        <picklist>
            <picklistValues>
                <fullName>MAPP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TAG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RBSN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GPA</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Trans_Path_Completion_Term__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>TP: Completion Term</label>
        <referenceTo>Term__c</referenceTo>
        <relationshipLabel>Opportunities (Completion Term)</relationshipLabel>
        <relationshipName>Opportunities_TransPathCompTerm</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Trans_Path_Credit_Hours__c</fullName>
        <label>TP: Credit Hours</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Trans_Path_Details__c</fullName>
        <label>TP: Details</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Trans_Path_Institution__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup field to the Account object for External Orgs (schools)</description>
        <label>TP: Institution</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities_Account</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Trans_Path_Plan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>TP: Plan</label>
        <referenceTo>Plan__c</referenceTo>
        <relationshipLabel>Opportunities (Plan)</relationshipLabel>
        <relationshipName>Opportunities_TransPathPlan</relationshipName>
        <type>Lookup</type>
    </fields>
    <listViews>
        <fullName>AllOpportunities</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>Contact__c</columns>
        <columns>Term__c</columns>
        <columns>Academic_Plan__c</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All Opportunities</label>
        <sharedTo/>
    </listViews>
    <listViews>
        <fullName>Deferred_Apps</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>Contact__c</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>Term__c</columns>
        <columns>Session__c</columns>
        <columns>I_20_Sent_Date__c</columns>
        <columns>Application_Number__c</columns>
        <columns>Application_Date__c</columns>
        <columns>Academic_Plan__c</columns>
        <columns>Location__c</columns>
        <columns>OPPORTUNITY.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Deferred__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Deferred Applications</label>
        <sharedTo/>
    </listViews>
    <listViews>
        <fullName>Drupal_Submissions</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>Contact__c</columns>
        <columns>Lead_Source_Subtype__c</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>Term__c</columns>
        <columns>College__c</columns>
        <columns>Academic_Plan__c</columns>
        <columns>OPPORTUNITY.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <filters>
            <field>CREATEDBY_USER.ALIAS</field>
            <operation>equals</operation>
            <value>asudrupl</value>
        </filters>
        <label>ASU API Drupal Submissions</label>
        <sharedTo>
            <group>QA_Testing_Group</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>LastModifiedThisWeek</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>Contact__c</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>Term__c</columns>
        <columns>Session__c</columns>
        <columns>Location__c</columns>
        <columns>Application_Number__c</columns>
        <columns>Application_Date__c</columns>
        <columns>Academic_Plan__c</columns>
        <columns>OPPORTUNITY.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.LAST_UPDATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>Last Modified This Week</label>
        <sharedTo/>
    </listViews>
    <listViews>
        <fullName>Missing_Account</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>Academic_Plan__c</columns>
        <columns>OPPORTUNITY.CREATED_DATE</columns>
        <columns>Contact__c</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>Application_Date__c</columns>
        <columns>Application_Number__c</columns>
        <columns>Term__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.NAME</field>
            <operation>equals</operation>
        </filters>
        <label>Missing Account</label>
        <sharedTo/>
    </listViews>
    <listViews>
        <fullName>Missing_Plan</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>Contact__c</columns>
        <columns>Term__c</columns>
        <columns>Academic_Plan__c</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Academic_Plan__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>Application_Number__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>Missing Plan</label>
        <sharedTo/>
    </listViews>
    <listViews>
        <fullName>My_Opportunities</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>Academic_Plan__c</columns>
        <columns>OPPORTUNITY.CREATED_DATE</columns>
        <columns>Contact__c</columns>
        <columns>Term__c</columns>
        <columns>Application_Date__c</columns>
        <columns>Application_Number__c</columns>
        <filterScope>Mine</filterScope>
        <label>My Opportunities</label>
        <sharedTo>
            <group>ES_Enrollment_Services_Group</group>
            <roleAndSubordinates>ES_Enrollment_Services</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>NewThisWeekI20</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>Contact__c</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>Term__c</columns>
        <columns>Session__c</columns>
        <columns>I_20_Sent_Date__c</columns>
        <columns>Location__c</columns>
        <columns>Application_Number__c</columns>
        <columns>Application_Date__c</columns>
        <columns>Academic_Plan__c</columns>
        <columns>OPPORTUNITY.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <filters>
            <field>I_20_Sent_Date__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>New This Week I-20</label>
        <sharedTo/>
    </listViews>
    <listViews>
        <fullName>NewThisWeekProspects</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>Contact__c</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>Term__c</columns>
        <columns>Academic_Interest__c</columns>
        <columns>College__c</columns>
        <columns>Academic_Plan__c</columns>
        <columns>OPPORTUNITY.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>equals</operation>
            <value>Prospect</value>
        </filters>
        <label>New This Week - Prospects</label>
        <sharedTo>
            <group>QA_Testing_Group</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>NewThisWeekProspectsMLF</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>Contact__c</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>Term__c</columns>
        <columns>Academic_Interest__c</columns>
        <columns>College__c</columns>
        <columns>Academic_Plan__c</columns>
        <columns>OPPORTUNITY.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>equals</operation>
            <value>Prospect</value>
        </filters>
        <filters>
            <field>Lead_Source_Subtype__c</field>
            <operation>equals</operation>
            <value>MaryLouFulton Teachers College</value>
        </filters>
        <label>New This Week - Prospects MLF</label>
        <sharedTo>
            <group>QA_Testing_Group</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>NewThisWeekProspectsNoAdmin</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>Contact__c</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>Term__c</columns>
        <columns>Academic_Interest__c</columns>
        <columns>College__c</columns>
        <columns>Academic_Plan__c</columns>
        <columns>OPPORTUNITY.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>equals</operation>
            <value>Prospect</value>
        </filters>
        <filters>
            <field>CREATEDBY_USER.ALIAS</field>
            <operation>notEqual</operation>
            <value>dbamp,asudrupl,sfadmin</value>
        </filters>
        <label>New This Week - Prospects No Admin</label>
        <sharedTo>
            <group>QA_Testing_Group</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Opportunities_Complete</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>Contact__c</columns>
        <columns>Term__c</columns>
        <columns>Session__c</columns>
        <columns>Academic_Plan__c</columns>
        <columns>OPPORTUNITY.LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>equals</operation>
            <value>Applicant - Complete</value>
        </filters>
        <label>Opportunities - Complete</label>
        <sharedTo/>
    </listViews>
    <listViews>
        <fullName>Opportunities_InCommittee</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>Contact__c</columns>
        <columns>Term__c</columns>
        <columns>Session__c</columns>
        <columns>Academic_Plan__c</columns>
        <columns>OPPORTUNITY.LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>equals</operation>
            <value>Applicant - In Committee</value>
        </filters>
        <label>Opportunities - In Committee</label>
        <sharedTo/>
    </listViews>
    <listViews>
        <fullName>Opportunities_Incomplete</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>Contact__c</columns>
        <columns>Application_Date__c</columns>
        <columns>Term__c</columns>
        <columns>Session__c</columns>
        <columns>Academic_Plan__c</columns>
        <columns>OPPORTUNITY.LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>equals</operation>
            <value>Applicant - Incomplete</value>
        </filters>
        <label>Opportunities - Incomplete</label>
        <sharedTo/>
    </listViews>
    <listViews>
        <fullName>Prospects_Academic_Interest</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>Contact__c</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>Term__c</columns>
        <columns>Academic_Interest__c</columns>
        <columns>College__c</columns>
        <columns>Academic_Plan__c</columns>
        <columns>OPPORTUNITY.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Academic_Interest__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>equals</operation>
            <value>Prospect</value>
        </filters>
        <label>Prospects - Academic Interest</label>
        <sharedTo>
            <group>QA_Testing_Group</group>
        </sharedTo>
    </listViews>
    <recordTypes>
        <fullName>Graduate_Application</fullName>
        <active>true</active>
        <businessProcess>Graduate Application</businessProcess>
        <description>Process for graduate applications</description>
        <label>Graduate Application</label>
    </recordTypes>
    <recordTypes>
        <fullName>Graduate_Prospect</fullName>
        <active>true</active>
        <businessProcess>Graduate Prospect</businessProcess>
        <description>Process for recruiting to graduate students</description>
        <label>Graduate Prospect</label>
    </recordTypes>
    <recordTypes>
        <fullName>Undergraduate_Application</fullName>
        <active>true</active>
        <businessProcess>Undergraduate Application</businessProcess>
        <description>Application record for Undergraduate Admissions process</description>
        <label>Undergraduate Application</label>
    </recordTypes>
    <recordTypes>
        <fullName>Undergraduate_Prospect</fullName>
        <active>true</active>
        <businessProcess>Undergraduate Prospect</businessProcess>
        <description>Prospective student for an undergraduate program.</description>
        <label>Undergraduate Prospect</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>